--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -1,27 +1,34 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.message {
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 4px;
+  white-space: pre-wrap;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ 
+.my-message {
+  background: var(--ion-color-tertiary);
+  color: #fff;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ 
+.other-message {
+  background: var(--ion-color-secondary);
+  color: #fff;
 }
-
-#container a {
-  text-decoration: none;
+ 
+.time {
+  color: #dfdfdf;
+  float: right;
+  font-size: small;
+}
+ 
+.message-input {
+  margin-top: 0px;
+  border: 1px solid var(--ion-color-medium);
+  border-radius: 10px;
+  background: #fff;
+}
+ 
+.msg-btn {
+  --padding-start: 0.5em;
+  --padding-end: 0.5em;
 }
